# 2026-Epita-Programmation-par-Contraintes

./: .gitignore  README.md  diet.py  preprocessing.py
.github/: ISSUES.md
A1-Kim_TAYANT-SERRAT/: .gitignore  README.md  diet.py  diet_pnle.py  modelisation.ipynb  preprocessing.py  train.ipynb
A2-Kim_TAYANT-SERRAT-Damien_DUTHOU/: .gitignore  README.md  api.py  benchmark.py  ciqual_clean.csv  modelisation.ipynb
A2-Planification-nutritionnelle/: README.md
A3-Ordonnancement-blocs-operatoires/: README.md  main.py  pyproject.toml
A3-Ordonnancement-blocs-operatoires/notebooks/: A3_or_scheduling.ipynb
A3-Ordonnancement-blocs-operatoires/notebooks/.ipynb_checkpoints/: A3_or_scheduling-checkpoint.ipynb
A3-Ordonnancement-blocs-operatoires/src/: __init__.py  cp_solver.py  heuristics.py  instances.py  models.py  visualization.py
B1-SALBP-IliasKalalou-KaelanGrall/: README.md  app.py  benchmark.py  requirements.txt
B4-Gallier-Naegelen/: B4-Ordonnancement_industriel.ipynb  requirements.txt
C1-Electric-VRP/: C1-EVRP-Notebook.ipynb  README.md  requirements.txt
C3-drone-delivery/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  shell.nix  slides.html
D3-Pacement-service-edge-computing/: D3-Placement de services en edge computing.ipynb  README.md  requirements.txt
D3-Placement-service-edge-computing/: D3-Placement de services en edge computing.ipynb
E4-Evariste_BALVAY/: .gitignore  README.md  rapport.md
F2-Cryptanalyse-differentielle-par-SAT/: README.md  benchmark.json  notebook.ipynb  pyproject.toml
F2-Cryptanalyse-differentielle-par-SAT/present_sat/: display.py  encoding.py  main.py  present.py  search.py
F3-Bounded-Model-Checking-de-programmes-C/: bmc.ipynb  nested_1b.c  pyproject.toml
Group-A1-Kidney-Exchange-Problem/: requirements.txt
Groupe-J1-Allocation-multicritere-de-candidats/: .env.example  (+4 more)
H4-Covering-Arrays/: Presentation.odp  README.md  flake.nix  pyproject.toml
H4-Covering-Arrays/src/: main.ipynb
M1-Sparse-Markowitz/: .gitignore  AUTHORS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
M1-Sparse-Markowitz/notebook/: M1-Sparse-Markowitz.ipynb
M1-Sparse-Markowitz/results/: README.md  backtest.csv  backtest_cum.csv  bench.csv  pareto.csv  reference_n50_k10.csv  scalability.csv  sp500_pnl.csv  sp500_pnl_curves.csv  symmetry_breaking.csv
M1-Sparse-Markowitz/scripts/: export_csv.py  run_backtest.py  run_benchmark.py  run_pareto.py  run_sp500.py
M1-Sparse-Markowitz/slides/: soutenance.md
M1-Sparse-Markowitz/src/: __init__.py  backtest.py  benchmark.py  cpsat_model.py  data.py  heuristics.py  milp_model.py
M1-Sparse-Markowitz/tests/: conftest.py  smoke.py  test_solvers.py
d1/: README.md  pyproject.toml
d1/notebooks/: affinity_anti_affinity.ipynb  benckmarck.ipynb  dynamic.ipynb  fragmentation.ipynb  unique_constraint.ipynb
d1/src/: benckmarck.ipynb
d1/src/vm_allocation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
d1/src/vm_allocation/datasets/: generate_dataset.py
d1/src/vm_allocation/models/: __init__.py  context.py  server.py  solver.py  vm.py
d1/src/vm_allocation/solvers/: __init__.py  cp_sat.py  ffd.py  plne.py
(+409 files in other folders)
