[project]
name = "h4-covering-arrays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ortools>=9.15.6755",
]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
]
