[project]
name = "vm-allocation"
version = "0.1.0"
description = "VM allocation optimization library"
readme = "README.md"
authors = [
    { name = "coraline.carpin", email = "coraline.carpin@epita.fr" },
    { name = "brendan.martin", email = "brendan.martin@epita.fr" },
    { name = "mustapha.oumeziane", email = "mustapha.oumeziane@epita.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.15.6755",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
